--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -100,6 +100,14 @@
             android:layout_height="wrap_content"
             android:text="Get Top Genres" />
 
+        <Button
+            android:id="@+id/spotify_wrapped"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Spotify Wrapped"
+            android:onClick = "this"
+            tools:ignore="OnClick" />
+
 
     </LinearLayout>
 
