--- a/app/src/main/res/layout/fragment_spotify_wrapped.xml
+++ b/app/src/main/res/layout/fragment_spotify_wrapped.xml
@@ -27,10 +27,10 @@
         android:textSize="64sp"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="394dp"
+
+        android:layout_height="209dp" />
 
 </RelativeLayout>
