--- a/app/src/main/res/layout/activity_spotify_wrapped.xml
+++ b/app/src/main/res/layout/activity_spotify_wrapped.xml
@@ -11,31 +11,18 @@
     <!-- Default text, will change programmatically -->
 
 
-    <Button
-        android:id="@+id/homeButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="@drawable/button_background"
-        android:padding="12dp"
-        android:text="Home"
-        android:textColor="@android:color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
-
     <TextView
         android:id="@+id/categoryHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
         android:text="Top Tracks"
         android:textColor="@color/primary_text"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/homeButton"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <ListView
@@ -44,6 +31,7 @@
         android:layout_height="410dp"
         android:layout_above="@id/nextButton"
         android:layout_below="@id/categoryHeader"
+        android:layout_marginTop="20dp"
         android:divider="@null"
         android:dividerHeight="0dp"
         android:listSelector="@android:color/transparent"
@@ -52,26 +40,29 @@
         tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/nextButton"
+        android:id="@+id/homeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="600dp"
         android:background="@drawable/button_background"
         android:padding="12dp"
-        android:text="Next"
+        android:text="Home"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
-    <RadioGroup
+    <!-- <RadioGroup
         android:id="@+id/radioGroup"
         android:layout_width="91dp"
         android:layout_height="351dp"
         app:layout_constraintBottom_toBottomOf="@+id/listViewData"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nextButton">
+        app:layout_constraintTop_toBottomOf="@+id/nextButton"
+        app:layout_constraintVertical_bias="1.0">
 
         <RadioButton
             android:id="@+id/radio1"
@@ -91,8 +82,78 @@
             android:layout_height="80dp"
             android:text="Halloween" />
 
-    </RadioGroup>
+        <RadioButton
+            android:id="@+id/radio4"
+            android:layout_width="match_parent"
+            android:layout_height="73dp"
+            android:text="Default" />
 
+    </RadioGroup>
+    -->
+
+    <Button
+        android:id="@+id/nextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/button_background"
+        android:padding="12dp"
+        android:text="Next"
+        android:textColor="@android:color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="132dp"
+        android:layout_height="295dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/spotifylogo" />
+
+    <ImageView
+        android:id="@+id/chocolatePic"
+        android:layout_width="180dp"
+        android:layout_height="250dp"
+        android:layout_marginBottom="105dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/chocolate" />
+
+    <ImageView
+        android:id="@+id/rainbowPic"
+        android:layout_width="175dp"
+        android:layout_height="250dp"
+        android:layout_marginBottom="105dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/rainbow" />
+
+    <ImageView
+        android:id="@+id/lanternPic"
+        android:layout_width="175dp"
+        android:layout_height="250dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/latern"
+        android:layout_marginBottom="105dp"/>
+
+    <TextView
+        android:id="@+id/dynamic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="15dp"
+        android:text="Spotify Wrapped!"
+        android:textColor="@color/primary_text"
+        android:textSize="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
