--- a/app/src/main/res/layout/activity_historical_lists.xml
+++ b/app/src/main/res/layout/activity_historical_lists.xml
@@ -1,39 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HistoricalListsActivity">
-
-    <TextView
-        android:id="@+id/textViewHistoryTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Historical Top Tracks"
-        android:textSize="24sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"/>
+    android:padding="16dp">
 
     <ListView
         android:id="@+id/listViewHistory"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/textViewHistoryTitle"
-        app:layout_constraintBottom_toTopOf="@id/buttonHome">
-    </ListView>
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/buttonHome"
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="16dp" />
 
     <Button
         android:id="@+id/buttonHome"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Home"
-        app:layout_constraintTop_toBottomOf="@id/listViewHistory"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"/>
+        android:layout_alignParentBottom="true"
+        android:text="Home" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
