--- a/app/src/main/res/layout/activity_spotify_wrapped.xml
+++ b/app/src/main/res/layout/activity_spotify_wrapped.xml
@@ -43,17 +43,17 @@
         android:id="@+id/homeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="600dp"
         android:background="@drawable/button_background"
         android:padding="12dp"
         android:text="Home"
         android:textColor="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/listViewData"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
+        android:layout_marginBottom="16dp" />
 
     <!-- <RadioGroup
         android:id="@+id/radioGroup"
