--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -4,6 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textSize="18sp"
-    android:textColor="@color/primary_text"
+    android:textColor="@color/black"
     android:padding="16dp"
     android:fontFamily="sans-serif-medium" />
