New Front Page Design

--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -85,8 +85,8 @@
 
             <RadioButton
                 android:id="@+id/radio4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:text="No special holiday"
                 android:background="@drawable/radio_button_selector"
                 android:padding="10dp"
@@ -95,8 +95,8 @@
 
             <RadioButton
                 android:id="@+id/radio1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:text="St. Patrick's Day"
                 android:background="@drawable/radio_button_selector"
                 android:padding="10dp"
@@ -104,8 +104,8 @@
 
             <RadioButton
                 android:id="@+id/radio2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:text="Valentine's Day"
                 android:background="@drawable/radio_button_selector"
                 android:padding="10dp"
@@ -113,8 +113,8 @@
 
             <RadioButton
                 android:id="@+id/radio3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:text="Halloween"
                 android:background="@drawable/radio_button_selector"
                 android:padding="10dp"
